fix: update letter spacing in password state

--- a/app/features/slug/components/StatesCommon.module.scss
+++ b/app/features/slug/components/StatesCommon.module.scss
@@ -95,11 +95,9 @@
 	outline: none;
 	transition: $transition-fast;
 	text-align: center;
-	letter-spacing: 4px;
 
 	&::placeholder {
 		color: color.adjust($color-border, $lightness: -10%);
-		letter-spacing: 4px;
 	}
 
 	&:focus {
